--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ buildscript {
         compose_version = '1.2.0'
         compose_navigation_version = '2.5.1'
         compose_hilt_navigation_version = '1.0.0'
+        room_version = '2.4.3'
+
     }
 
     dependencies {
