--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -11,5 +11,6 @@ java {
 
 dependencies {
     implementation 'com.google.dagger:hilt-core:2.43.2'
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
     kapt 'com.google.dagger:hilt-compiler:2.43.2'
 }
